--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@
 html, body, #root {
   height: 100%;
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
